--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,17 @@
 Bugs / things to fix
-- weird "try out a sidebar" aside in index.html (in posts)
-- when I list things, make it so that there's no comma after the last item in the list
-- once you decide for certain you like the set-up with base2.html, rename it to base.html and delete the original base.html
-- add ability to search coffees by roast level, cupping notes. Maybe acidity too?
-- change score system so that different people can submit different scores
-- change font. perhaps get rid of bootstrap altogether.
+- DONE -- weird "try out a sidebar" aside in index.html (in posts)
+- DONE -- when I list things, make it so that there's no comma after the last item in the list
+- DONE -- once you decide for certain you like the set-up with base2.html, rename it to base.html and delete the original base.html
+- DONE -- add ability to search coffees by roast level, cupping notes. Maybe acidity too?
+- DONE -- change score system so that different people can submit different scores
+    - working on this now. Need to figure out how to improve this in models.py
+    - improve Scores class, especially the class meta, so that it returns author + coffee + score
+    - figure out how to display relevant scores on coffee details page
+- DONE -- change font. perhaps get rid of bootstrap altogether.
+- Make blog look nicer :/ 
+    - New color scheme?
+    - change the bold face font so that it's more readable
+    - make nav bar better
+- Fix search
+    - Right now, I have separate searches for coffee and food. Make this into one search bar. I think for this, I need to rewrite the search.html file to index both recipes and coffees.
+    - Fix coffee search so that it searches origin, comments, cupping notes, etc. (Could do something similar for food search too)
