--- a/todo.txt
+++ b/todo.txt
@@ -15,3 +15,4 @@ Bugs / things to fix
 - DONE -- Fix search
     - Right now, I have separate searches for coffee and food. Make this into one search bar. I think for this, I need to rewrite the search.html file to index both recipes and coffees.
     - Fix coffee search so that it searches origin, comments, cupping notes, etc. (Could do something similar for food search too)
+- See if I can add formatting options for the comments/body of posts and coffees, such as italicizing text, having the option for bullet point lists, etc.
