--- a/todo.txt
+++ b/todo.txt
@@ -10,12 +10,12 @@ Bugs / things to fix
 - DONE -- change font. perhaps get rid of bootstrap altogether.
 - Make blog look nicer :/ 
     - New color scheme?
-    - change the bold face font so that it's more readable
-    - make nav bar better
+    - DONE -- change the bold face font so that it's more readable
+    - DONE -- make nav bar better
     - DONE -- add search bar to the new "header"
-    - get rid of the "tab title" in base.html
+    - DONE -- get rid of the "tab title" in base.html
     - add border to the sidebar
-    - make it so that there's not an empty list of tags to the side when you search by tag 
+    - DONE -- make it so that there's not an empty list of tags to the side when you search by tag 
 
 - DONE -- Fix search
     - Right now, I have separate searches for coffee and food. Make this into one search bar. I think for this, I need to rewrite the search.html file to index both recipes and coffees.
