--- a/todo.txt
+++ b/todo.txt
@@ -26,3 +26,4 @@ Bugs / things to fix
 - Figure out the following: is there a way to configure the Country class so that if there are no coffees with a certain country listed as its origin, that country automatically gets deleted? Same for cupping notes & roaster. And tags for posts in the food app.
 - DONE -- Clean up settings.py file
 - Figure out how to get pictures to always render
+- add media to .gitignore and delete all the photos on the repo
