--- a/todo.txt
+++ b/todo.txt
@@ -30,6 +30,6 @@ Bugs / things to fix
 - Make website responsive, in that it renders differently on a phone versus a computer
      - DONE -- warm-up: make personal math website responsive 
 - Add comment feature to posts
-- add wash/natural process option for coffee model
+- DONE -- add wash/natural process option for coffee model
 - make things listed alphabetically in coffee model 
    
