--- a/todo.txt
+++ b/todo.txt
@@ -30,6 +30,7 @@ Bugs / things to fix
 - DONE -- Make website responsive, in that it renders differently on a phone versus a computer
      - DONE -- warm-up: make personal math website responsive 
 - Add comment feature to posts
+    - Make it look better... back to frontend -__-
 - DONE -- add wash/natural process option for coffee model
 - DONE -- make things listed alphabetically in coffee model 
 - Add slugs to coffee posts 
