--- a/todo.txt
+++ b/todo.txt
@@ -29,11 +29,12 @@ Bugs / things to fix
 - DONE -- add media to .gitignore and delete all the photos on the repo
 - DONE -- Make website responsive, in that it renders differently on a phone versus a computer
      - DONE -- warm-up: make personal math website responsive 
-- Add comment feature to posts
-    - Make it look better... back to frontend -__-
+- DONE -- Add comment feature to posts
+    - DONE -- Make it look better... back to frontend -__-
 - DONE -- add wash/natural process option for coffee model
 - DONE -- make things listed alphabetically in coffee model 
 - Add slugs to coffee posts 
 - Change processing attribute so that you can select two different processing methods
+- change cupping notes format in coffee
 - Change admin so that an email is linked ?
    
