--- a/todo.txt
+++ b/todo.txt
@@ -34,7 +34,7 @@ Bugs / things to fix
 - DONE -- add wash/natural process option for coffee model
 - DONE -- make things listed alphabetically in coffee model 
 - Add slugs to coffee posts 
-- Change processing attribute so that you can select two different processing methods
-- change cupping notes format in coffee
+- DONE -- Change processing attribute so that you can select two different processing methods
+- change cupping notes format in coffee (still undecided about if I want this change or not.)
 - Change admin so that an email is linked ?
    
